--- a/css/shop.css
+++ b/css/shop.css
@@ -1,26 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
-body{
+body {
     font-family: Poppins;
 }
+
+
 /* navbar */
-.navbar{
+
+.navbar {
     background-color: rgb(43, 43, 43) !important;
 }
-.nav-link{
+
+
+/*
+.nav-link {
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: bold;
-}
-.nav-link:hover{
+}*/
+
+.nav-link:hover {
     color: white;
 }
-.grocery-img{
+
+.grocery-img {
     width: 60%;
     margin: 1rem auto;
 }
 
-.price{
+.price {
     position: absolute;
     right: 0;
     margin-right: 1rem;
+}
+
+.textEmptyCart.hide {
+    display: none;
 }
